<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ARTrack</string>

    <string name="text_main">Pulse en la imagen para comenzar el entrenamiento</string>
    <string name="t_actualizacion">Tiempo de actualización</string>
    <string name="picker_ok">Fijar</string>
    <string name="picker_ko">No fijar</string>

    <string name="titulo_calc">ESTADÍSTICAS EN EL ÚLTIMO INTERVALO</string>
    <string name="dist">Distancia recorrida (m): </string>
    <string name="vel">Velocidad (km/h): </string>
    <string name="ac">Estado de aceleración: </string>
    <string name="sin_valor">-</string>
    <string name="button_calculation">Finalizar entrenamiento</string>
    <string name="button_map">Ver recorrido en el mapa</string>
    <string name="button_main">Nuevo entrenamiento</string>
    <string name="title_activity_calculation">CalculationActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="titulo_res">ESTADÍSTICAS FINALES</string>
    <string name="dist_rec">Distancia recorrida (m): </string>
    <string name="vel_media">Velocidad media (km/h): </string>
    <string name="duracion">Duración (s): </string>

</resources>
