<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dam.proyectodam.ResultActivity"
    android:weightSum="1">

    <TextView android:text="@string/titulo_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titulo_fin"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:textColor="@android:color/holo_green_dark"
        android:layout_alignParentTop="true" />

    <TextView
        android:text="@string/dist_rec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dist_rec"
        android:textSize="15sp"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/titulo_fin" />

    <TextView
        android:text="@string/vel_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vel_media"
        android:textSize="15sp"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dist_rec" />

    <TextView
        android:text="@string/duracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/duracion"
        android:textSize="15sp"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/vel_media" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textorelleno4"
        android:layout_alignBottom="@id/dist_rec"
        android:layout_toRightOf="@id/dist_rec"
        android:layout_toEndOf="@id/titulo_fin"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/sin_valor"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textorelleno5"
        android:layout_alignBottom="@id/vel_media"
        android:layout_alignLeft="@id/textorelleno4"
        android:layout_alignStart="@id/textorelleno4"
        android:text="@string/sin_valor"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textorelleno6"
        android:layout_alignBottom="@id/duracion"
        android:layout_alignLeft="@id/textorelleno5"
        android:layout_alignStart="@id/textorelleno5"
        android:text="@string/sin_valor"
        android:textSize="12sp" />

    <Button android:id="@+id/botonMapa"
        android:layout_width="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/button_map"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:onClick="mostrarMapa"
        android:layout_below="@id/duracion" />

    <Button android:id="@+id/botonNuevoEntr"
        android:layout_width="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/button_main"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:onClick="volverMain"
        android:layout_below="@id/botonMapa" />


</RelativeLayout>
